<resources>
    <string name="app_name">Culty</string>
    <string name="action_settings">Opções</string>
    <string name="artist">Artista</string>
    <string name="artists">Artistas</string>
    <string name="content">Conteúdo</string>
    <string name="contents">Conteúdos</string>
    <string name="content_title">Título</string>
    <string name="content_description">Resumo</string>
    <string name="content_type">Tipo de conteúdo</string>
    <string name="content_type_text">Texto</string>
    <string name="content_type_media">Mídia</string>
    <string name="explore">Explorar</string>
    <string name="follow">Seguir</string>
    <string name="following">Seguindo</string>
    <string name="filters">Filtros</string>
    <string name="filters_description">Adicione novos filtros</string>
    <string name="upload">Postar</string>
    <string name="profile">Perfil</string>
    <string name="about">Sobre o Culty</string>
    <string name="app_policy">Política do Aplicativo</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="copyright">© 2019 Culty. Todos os direitos reservados.</string>
    <!-- LOGIN -->
    <string name="log_in">Entrar</string>
    <string name="log_out">Sair</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar or Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem-vindo!"</string>
    <string name="invalid_username">Nome de usuário inválido!</string>
    <string name="invalid_password">A senha precisa ter mais de 5 caracteres</string>
    <string name="login_failed">"Opa! Não foi possível fazer isso. (Erro #001)"</string>
    <string name="register_hint">"Não possui uma conta?</string>
    <string name="remind_account">Lembrar?</string>
    <string name="register">Registrar</string>
    <string name="forgot_password">Esqueci minha senha</string>
</resources>
